<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>Tablifi</artifactId>
        <groupId>tablifi</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>tablifi.app</artifactId>

    <properties>
        <maven.compiler.source>12</maven.compiler.source>
        <maven.compiler.target>12</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>tablifi</groupId>
            <artifactId>tablifi.jre</artifactId>
            <version>1.0-SNAPSHOT</version>
            <classifier>jre</classifier>
            <type>zip</type>
        </dependency>
        <dependency>
            <groupId>tablifi</groupId>
            <artifactId>tablifi.base</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.4.2</version>
                <executions>
                    <execution>
                        <id>super-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!--descriptor>.\uber-jar.xml</descriptor-->
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <main-class>
                                tablifi.Tablifi
                            </main-class>
                        </manifest>
                        <manifestEntries>
                            <Multi-Release>true</Multi-Release>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>l4j-gui</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>console</headerType>
                            <outfile>target/Tablifi.exe</outfile>
                            <jar>target/tablifi.app-${project.version}-jar-with-dependencies.jar</jar>
                            <errTitle>Tablifi - Error</errTitle>
                            <classPath>
                                <mainClass>tablifi.Tablifi</mainClass>
                                <addDependencies>true</addDependencies>
                                <preCp>lib/</preCp>
                            </classPath>
                            <dontWrapJar>false</dontWrapJar>
                            <cmdLine/>
                            <chdir>.</chdir>
                            <priority>normal</priority>
                            <downloadUrl>http://java.com/download</downloadUrl>
                            <supportUrl/>
                            <stayAlive>true</stayAlive>
                            <restartOnCrash>false</restartOnCrash>
                            <manifest>${project.basedir}/Tablifi.exe.manifest</manifest>
                            <icon>${project.basedir}/paw.ico</icon>
                            <jre>
                                <path>${project.basedir}/../tablifi.jre/target/maven-jlink/classifiers/jre</path>
                                <bundledJre64Bit>true</bundledJre64Bit>
                                <bundledJreAsFallback>false</bundledJreAsFallback>
                                <minVersion>12</minVersion>
                                <maxVersion>17</maxVersion>
                                <jdkPreference>preferJre</jdkPreference>
                                <runtimeBits>64/32</runtimeBits>
                                <initialHeapPercent>10</initialHeapPercent>
                                <maxHeapPercent>50</maxHeapPercent>
                                <opts>
                                    <opt>-Dlaunch4j.exedir=%EXEDIR% --add-opens java.base/java.io=ALL-UNNAMED</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <fileVersion>1.0.0.0</fileVersion>
                                <txtFileVersion>1.0.0.0</txtFileVersion>
                                <fileDescription>Tablifi</fileDescription>
                                <copyright>Alan Curran</copyright>
                                <productVersion>1.0.0.0</productVersion>
                                <txtProductVersion>1.0.0.0</txtProductVersion>
                                <productName>Tablifi</productName>
                                <companyName/>
                                <internalName>Tablifi</internalName>
                                <originalFilename>Tablifi.exe</originalFilename>
                                <trademarks/>
                                <language>ENGLISH_UK</language>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>